correct mobile menu alignment for about page

--- a/styles/about.style.mobile.css
+++ b/styles/about.style.mobile.css
@@ -234,6 +234,17 @@ body {
 
 /* styling the mobile menu */
 
+.mobile-menu-active {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0.001px;
+  right: 0.001px;
+  background-color: #e5e5e5;
+  z-index: 2;
+}
+
 .mobile-menu-active .container {
   position: fixed;
   width: 100%;
